Added more Stuff to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,15 @@ bower.json
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Because we work on different platforms
+Gemfile.lock
+
+# Seems to cause problems when db model changes. Gets generated automatically anyways.
+db/schema.rb
+
+# IntelliJ
+.idea
+*.iml
+*.ipr
+*.iws
